Teste1/sintatico.automaton
State 0:
programa' -> . programa [ # ]
-- On PROLOGO shift to state 1
-- On programa shift to state 159

State 1:
programa -> PROLOGO . funcoes funcaoMain [ # ]
-- On TINT shift to state 2
-- On TFLOAT shift to state 3
-- On TCHAR shift to state 4
-- On tipo shift to state 5
-- On funcoes shift to state 148
-- On funcao shift to state 157
-- On FUNCAOMAIN reduce production funcoes -> 

State 2:
tipo -> TINT . [ ID ]
-- On ID reduce production tipo -> TINT 

State 3:
tipo -> TFLOAT . [ ID ]
-- On ID reduce production tipo -> TFLOAT 

State 4:
tipo -> TCHAR . [ ID ]
-- On ID reduce production tipo -> TCHAR 

State 5:
funcao -> tipo . ID APAR argumentos FPAR ACHAVE comandos RETURN expressao PTV FCHAVE [ TINT TFLOAT TCHAR FUNCAOMAIN ]
-- On ID shift to state 6

State 6:
funcao -> tipo ID . APAR argumentos FPAR ACHAVE comandos RETURN expressao PTV FCHAVE [ TINT TFLOAT TCHAR FUNCAOMAIN ]
-- On APAR shift to state 7

State 7:
funcao -> tipo ID APAR . argumentos FPAR ACHAVE comandos RETURN expressao PTV FCHAVE [ TINT TFLOAT TCHAR FUNCAOMAIN ]
-- On TINT shift to state 8
-- On TFLOAT shift to state 11
-- On TCHAR shift to state 14
-- On tipo shift to state 17
-- On argumentos shift to state 22
-- On argumento shift to state 145
-- On FPAR reduce production argumentos -> 

State 8:
argumento -> TINT . ID PTV [ VIRG FPAR ]
tipo -> TINT . [ ID ]
-- On ID shift to state 9
-- On ID reduce production tipo -> TINT 
** Conflict on ID

State 9:
argumento -> TINT ID . PTV [ VIRG FPAR ]
-- On PTV shift to state 10

State 10:
argumento -> TINT ID PTV . [ VIRG FPAR ]
-- On VIRG reduce production argumento -> TINT ID PTV 
-- On FPAR reduce production argumento -> TINT ID PTV 

State 11:
argumento -> TFLOAT . ID PTV [ VIRG FPAR ]
tipo -> TFLOAT . [ ID ]
-- On ID shift to state 12
-- On ID reduce production tipo -> TFLOAT 
** Conflict on ID

State 12:
argumento -> TFLOAT ID . PTV [ VIRG FPAR ]
-- On PTV shift to state 13

State 13:
argumento -> TFLOAT ID PTV . [ VIRG FPAR ]
-- On VIRG reduce production argumento -> TFLOAT ID PTV 
-- On FPAR reduce production argumento -> TFLOAT ID PTV 

State 14:
argumento -> TCHAR . ID PTV [ VIRG FPAR ]
tipo -> TCHAR . [ ID ]
-- On ID shift to state 15
-- On ID reduce production tipo -> TCHAR 
** Conflict on ID

State 15:
argumento -> TCHAR ID . PTV [ VIRG FPAR ]
-- On PTV shift to state 16

State 16:
argumento -> TCHAR ID PTV . [ VIRG FPAR ]
-- On VIRG reduce production argumento -> TCHAR ID PTV 
-- On FPAR reduce production argumento -> TCHAR ID PTV 

State 17:
argumento -> tipo . ID ACOL INT FCOL [ VIRG FPAR ]
-- On ID shift to state 18

State 18:
argumento -> tipo ID . ACOL INT FCOL [ VIRG FPAR ]
-- On ACOL shift to state 19

State 19:
argumento -> tipo ID ACOL . INT FCOL [ VIRG FPAR ]
-- On INT shift to state 20

State 20:
argumento -> tipo ID ACOL INT . FCOL [ VIRG FPAR ]
-- On FCOL shift to state 21

State 21:
argumento -> tipo ID ACOL INT FCOL . [ VIRG FPAR ]
-- On VIRG reduce production argumento -> tipo ID ACOL INT FCOL 
-- On FPAR reduce production argumento -> tipo ID ACOL INT FCOL 

State 22:
funcao -> tipo ID APAR argumentos . FPAR ACHAVE comandos RETURN expressao PTV FCHAVE [ TINT TFLOAT TCHAR FUNCAOMAIN ]
-- On FPAR shift to state 23

State 23:
funcao -> tipo ID APAR argumentos FPAR . ACHAVE comandos RETURN expressao PTV FCHAVE [ TINT TFLOAT TCHAR FUNCAOMAIN ]
-- On ACHAVE shift to state 24

State 24:
funcao -> tipo ID APAR argumentos FPAR ACHAVE . comandos RETURN expressao PTV FCHAVE [ TINT TFLOAT TCHAR FUNCAOMAIN ]
-- On WHILE shift to state 25
-- On TINT shift to state 72
-- On TFLOAT shift to state 75
-- On TCHAR shift to state 78
-- On PRINTSTR shift to state 81
-- On PRINTINT shift to state 86
-- On PRINTFLOAT shift to state 91
-- On PRINTCHAR shift to state 96
-- On IF shift to state 101
-- On ID shift to state 103
-- On ACHAVE shift to state 113
-- On tipo shift to state 114
-- On declaracao shift to state 120
-- On comandos shift to state 140
-- On comando_while shift to state 123
-- On comando_output shift to state 124
-- On comando_if shift to state 125
-- On comando_atrib shift to state 126
-- On comando shift to state 127
-- On bloco shift to state 129
-- On RETURN reduce production comandos -> 

State 25:
comando_while -> WHILE . comparacao comando [ WHILE TINT TFLOAT TCHAR RETURN PRINTSTR PRINTINT PRINTFLOAT PRINTCHAR IF ID FCHAVE ELSE ACHAVE ]
comando_while -> WHILE . comparacao bloco [ WHILE TINT TFLOAT TCHAR RETURN PRINTSTR PRINTINT PRINTFLOAT PRINTCHAR IF ID FCHAVE ELSE ACHAVE ]
-- On APAR shift to state 26
-- On comparacao shift to state 71

State 26:
comparacao -> APAR . operando comparador operando FPAR [ WHILE TINT TFLOAT TCHAR PRINTSTR PRINTINT PRINTFLOAT PRINTCHAR IF ID ACHAVE ]
-- On STRING shift to state 27
-- On INT shift to state 28
-- On ID shift to state 29
-- On FLOAT shift to state 33
-- On CHAR shift to state 34
-- On APAR shift to state 35
-- On operando shift to state 61

State 27:
operando -> STRING . [ VIRG VEZES PTV MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR FCHAVE DIV DIFERENTE ]
-- On VIRG reduce production operando -> STRING 
-- On VEZES reduce production operando -> STRING 
-- On PTV reduce production operando -> STRING 
-- On MENOS reduce production operando -> STRING 
-- On MENORIGUAL reduce production operando -> STRING 
-- On MENOR reduce production operando -> STRING 
-- On MAIS reduce production operando -> STRING 
-- On MAIORIGUAL reduce production operando -> STRING 
-- On MAIOR reduce production operando -> STRING 
-- On IGUAL reduce production operando -> STRING 
-- On FPAR reduce production operando -> STRING 
-- On FCHAVE reduce production operando -> STRING 
-- On DIV reduce production operando -> STRING 
-- On DIFERENTE reduce production operando -> STRING 

State 28:
operando -> INT . [ VIRG VEZES PTV MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR FCHAVE DIV DIFERENTE ]
-- On VIRG reduce production operando -> INT 
-- On VEZES reduce production operando -> INT 
-- On PTV reduce production operando -> INT 
-- On MENOS reduce production operando -> INT 
-- On MENORIGUAL reduce production operando -> INT 
-- On MENOR reduce production operando -> INT 
-- On MAIS reduce production operando -> INT 
-- On MAIORIGUAL reduce production operando -> INT 
-- On MAIOR reduce production operando -> INT 
-- On IGUAL reduce production operando -> INT 
-- On FPAR reduce production operando -> INT 
-- On FCHAVE reduce production operando -> INT 
-- On DIV reduce production operando -> INT 
-- On DIFERENTE reduce production operando -> INT 

State 29:
operando -> ID . ACOL INT FCOL [ MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR DIFERENTE ]
operando -> ID . [ MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR DIFERENTE ]
-- On ACOL shift to state 30
-- On MENORIGUAL reduce production operando -> ID 
-- On MENOR reduce production operando -> ID 
-- On MAIORIGUAL reduce production operando -> ID 
-- On MAIOR reduce production operando -> ID 
-- On IGUAL reduce production operando -> ID 
-- On FPAR reduce production operando -> ID 
-- On DIFERENTE reduce production operando -> ID 

State 30:
operando -> ID ACOL . INT FCOL [ VIRG VEZES PTV MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR FCHAVE DIV DIFERENTE ]
-- On INT shift to state 31

State 31:
operando -> ID ACOL INT . FCOL [ VIRG VEZES PTV MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR FCHAVE DIV DIFERENTE ]
-- On FCOL shift to state 32

State 32:
operando -> ID ACOL INT FCOL . [ VIRG VEZES PTV MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR FCHAVE DIV DIFERENTE ]
-- On VIRG reduce production operando -> ID ACOL INT FCOL 
-- On VEZES reduce production operando -> ID ACOL INT FCOL 
-- On PTV reduce production operando -> ID ACOL INT FCOL 
-- On MENOS reduce production operando -> ID ACOL INT FCOL 
-- On MENORIGUAL reduce production operando -> ID ACOL INT FCOL 
-- On MENOR reduce production operando -> ID ACOL INT FCOL 
-- On MAIS reduce production operando -> ID ACOL INT FCOL 
-- On MAIORIGUAL reduce production operando -> ID ACOL INT FCOL 
-- On MAIOR reduce production operando -> ID ACOL INT FCOL 
-- On IGUAL reduce production operando -> ID ACOL INT FCOL 
-- On FPAR reduce production operando -> ID ACOL INT FCOL 
-- On FCHAVE reduce production operando -> ID ACOL INT FCOL 
-- On DIV reduce production operando -> ID ACOL INT FCOL 
-- On DIFERENTE reduce production operando -> ID ACOL INT FCOL 

State 33:
operando -> FLOAT . [ VIRG VEZES PTV MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR FCHAVE DIV DIFERENTE ]
-- On VIRG reduce production operando -> FLOAT 
-- On VEZES reduce production operando -> FLOAT 
-- On PTV reduce production operando -> FLOAT 
-- On MENOS reduce production operando -> FLOAT 
-- On MENORIGUAL reduce production operando -> FLOAT 
-- On MENOR reduce production operando -> FLOAT 
-- On MAIS reduce production operando -> FLOAT 
-- On MAIORIGUAL reduce production operando -> FLOAT 
-- On MAIOR reduce production operando -> FLOAT 
-- On IGUAL reduce production operando -> FLOAT 
-- On FPAR reduce production operando -> FLOAT 
-- On FCHAVE reduce production operando -> FLOAT 
-- On DIV reduce production operando -> FLOAT 
-- On DIFERENTE reduce production operando -> FLOAT 

State 34:
operando -> CHAR . [ VIRG VEZES PTV MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR FCHAVE DIV DIFERENTE ]
-- On VIRG reduce production operando -> CHAR 
-- On VEZES reduce production operando -> CHAR 
-- On PTV reduce production operando -> CHAR 
-- On MENOS reduce production operando -> CHAR 
-- On MENORIGUAL reduce production operando -> CHAR 
-- On MENOR reduce production operando -> CHAR 
-- On MAIS reduce production operando -> CHAR 
-- On MAIORIGUAL reduce production operando -> CHAR 
-- On MAIOR reduce production operando -> CHAR 
-- On IGUAL reduce production operando -> CHAR 
-- On FPAR reduce production operando -> CHAR 
-- On FCHAVE reduce production operando -> CHAR 
-- On DIV reduce production operando -> CHAR 
-- On DIFERENTE reduce production operando -> CHAR 

State 35:
operando -> APAR . expressao FPAR [ VIRG VEZES PTV MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR FCHAVE DIV DIFERENTE ]
-- On STRING shift to state 27
-- On NOT shift to state 36
-- On INT shift to state 28
-- On ID shift to state 37
-- On FLOAT shift to state 33
-- On CHAR shift to state 34
-- On APAR shift to state 35
-- On ACHAVE shift to state 39
-- On operando shift to state 40
-- On expressao shift to state 59

State 36:
expressao -> NOT . expressao [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
-- On STRING shift to state 27
-- On NOT shift to state 36
-- On INT shift to state 28
-- On ID shift to state 37
-- On FLOAT shift to state 33
-- On CHAR shift to state 34
-- On APAR shift to state 35
-- On ACHAVE shift to state 39
-- On operando shift to state 40
-- On expressao shift to state 58

State 37:
expressao -> ID . APAR expressoes FPAR [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
operando -> ID . ACOL INT FCOL [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
operando -> ID . [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
-- On APAR shift to state 38
-- On ACOL shift to state 30
-- On VIRG reduce production operando -> ID 
-- On VEZES reduce production operando -> ID 
-- On PTV reduce production operando -> ID 
-- On MENOS reduce production operando -> ID 
-- On MAIS reduce production operando -> ID 
-- On FPAR reduce production operando -> ID 
-- On FCHAVE reduce production operando -> ID 
-- On DIV reduce production operando -> ID 

State 38:
expressao -> ID APAR . expressoes FPAR [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
-- On STRING shift to state 27
-- On NOT shift to state 36
-- On INT shift to state 28
-- On ID shift to state 37
-- On FLOAT shift to state 33
-- On CHAR shift to state 34
-- On APAR shift to state 35
-- On ACHAVE shift to state 39
-- On operando shift to state 40
-- On expressoes shift to state 51
-- On expressao shift to state 53
-- On FPAR reduce production expressoes -> 

State 39:
expressao -> ACHAVE . expressao FCHAVE [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
-- On STRING shift to state 27
-- On NOT shift to state 36
-- On INT shift to state 28
-- On ID shift to state 37
-- On FLOAT shift to state 33
-- On CHAR shift to state 34
-- On APAR shift to state 35
-- On ACHAVE shift to state 39
-- On operando shift to state 40
-- On expressao shift to state 41

State 40:
expressao -> operando . [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
-- On VIRG reduce production expressao -> operando 
-- On VEZES reduce production expressao -> operando 
-- On PTV reduce production expressao -> operando 
-- On MENOS reduce production expressao -> operando 
-- On MAIS reduce production expressao -> operando 
-- On FPAR reduce production expressao -> operando 
-- On FCHAVE reduce production expressao -> operando 
-- On DIV reduce production expressao -> operando 

State 41:
expressao -> expressao . MAIS expressao [ VEZES MENOS MAIS FCHAVE DIV ]
expressao -> expressao . MENOS expressao [ VEZES MENOS MAIS FCHAVE DIV ]
expressao -> expressao . VEZES expressao [ VEZES MENOS MAIS FCHAVE DIV ]
expressao -> expressao . DIV expressao [ VEZES MENOS MAIS FCHAVE DIV ]
expressao -> ACHAVE expressao . FCHAVE [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
-- On VEZES shift to state 42
-- On MENOS shift to state 44
-- On MAIS shift to state 46
-- On FCHAVE shift to state 50
-- On DIV shift to state 48

State 42:
expressao -> expressao VEZES . expressao [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
-- On STRING shift to state 27
-- On NOT shift to state 36
-- On INT shift to state 28
-- On ID shift to state 37
-- On FLOAT shift to state 33
-- On CHAR shift to state 34
-- On APAR shift to state 35
-- On ACHAVE shift to state 39
-- On operando shift to state 40
-- On expressao shift to state 43

State 43:
expressao -> expressao . MAIS expressao [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
expressao -> expressao . MENOS expressao [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
expressao -> expressao . VEZES expressao [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
expressao -> expressao VEZES expressao . [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
expressao -> expressao . DIV expressao [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
-- On MENOS shift to state 44
-- On MAIS shift to state 46
-- On VIRG reduce production expressao -> expressao VEZES expressao 
-- On VEZES reduce production expressao -> expressao VEZES expressao 
-- On PTV reduce production expressao -> expressao VEZES expressao 
-- On MENOS reduce production expressao -> expressao VEZES expressao 
-- On MAIS reduce production expressao -> expressao VEZES expressao 
-- On FPAR reduce production expressao -> expressao VEZES expressao 
-- On FCHAVE reduce production expressao -> expressao VEZES expressao 
-- On DIV reduce production expressao -> expressao VEZES expressao 
** Conflict on MENOS MAIS

State 44:
expressao -> expressao MENOS . expressao [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
-- On STRING shift to state 27
-- On NOT shift to state 36
-- On INT shift to state 28
-- On ID shift to state 37
-- On FLOAT shift to state 33
-- On CHAR shift to state 34
-- On APAR shift to state 35
-- On ACHAVE shift to state 39
-- On operando shift to state 40
-- On expressao shift to state 45

State 45:
expressao -> expressao . MAIS expressao [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
expressao -> expressao . MENOS expressao [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
expressao -> expressao MENOS expressao . [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
expressao -> expressao . VEZES expressao [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
expressao -> expressao . DIV expressao [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
-- On VEZES shift to state 42
-- On MENOS shift to state 44
-- On MAIS shift to state 46
-- On DIV shift to state 48
-- On VIRG reduce production expressao -> expressao MENOS expressao 
-- On VEZES reduce production expressao -> expressao MENOS expressao 
-- On PTV reduce production expressao -> expressao MENOS expressao 
-- On MENOS reduce production expressao -> expressao MENOS expressao 
-- On MAIS reduce production expressao -> expressao MENOS expressao 
-- On FPAR reduce production expressao -> expressao MENOS expressao 
-- On FCHAVE reduce production expressao -> expressao MENOS expressao 
-- On DIV reduce production expressao -> expressao MENOS expressao 
** Conflict on VEZES MENOS MAIS DIV

State 46:
expressao -> expressao MAIS . expressao [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
-- On STRING shift to state 27
-- On NOT shift to state 36
-- On INT shift to state 28
-- On ID shift to state 37
-- On FLOAT shift to state 33
-- On CHAR shift to state 34
-- On APAR shift to state 35
-- On ACHAVE shift to state 39
-- On operando shift to state 40
-- On expressao shift to state 47

State 47:
expressao -> expressao . MAIS expressao [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
expressao -> expressao MAIS expressao . [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
expressao -> expressao . MENOS expressao [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
expressao -> expressao . VEZES expressao [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
expressao -> expressao . DIV expressao [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
-- On VEZES shift to state 42
-- On MENOS shift to state 44
-- On MAIS shift to state 46
-- On DIV shift to state 48
-- On VIRG reduce production expressao -> expressao MAIS expressao 
-- On VEZES reduce production expressao -> expressao MAIS expressao 
-- On PTV reduce production expressao -> expressao MAIS expressao 
-- On MENOS reduce production expressao -> expressao MAIS expressao 
-- On MAIS reduce production expressao -> expressao MAIS expressao 
-- On FPAR reduce production expressao -> expressao MAIS expressao 
-- On FCHAVE reduce production expressao -> expressao MAIS expressao 
-- On DIV reduce production expressao -> expressao MAIS expressao 
** Conflict on VEZES MENOS MAIS DIV

State 48:
expressao -> expressao DIV . expressao [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
-- On STRING shift to state 27
-- On NOT shift to state 36
-- On INT shift to state 28
-- On ID shift to state 37
-- On FLOAT shift to state 33
-- On CHAR shift to state 34
-- On APAR shift to state 35
-- On ACHAVE shift to state 39
-- On operando shift to state 40
-- On expressao shift to state 49

State 49:
expressao -> expressao . MAIS expressao [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
expressao -> expressao . MENOS expressao [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
expressao -> expressao . VEZES expressao [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
expressao -> expressao . DIV expressao [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
expressao -> expressao DIV expressao . [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
-- On MENOS shift to state 44
-- On MAIS shift to state 46
-- On VIRG reduce production expressao -> expressao DIV expressao 
-- On VEZES reduce production expressao -> expressao DIV expressao 
-- On PTV reduce production expressao -> expressao DIV expressao 
-- On MENOS reduce production expressao -> expressao DIV expressao 
-- On MAIS reduce production expressao -> expressao DIV expressao 
-- On FPAR reduce production expressao -> expressao DIV expressao 
-- On FCHAVE reduce production expressao -> expressao DIV expressao 
-- On DIV reduce production expressao -> expressao DIV expressao 
** Conflict on MENOS MAIS

State 50:
expressao -> ACHAVE expressao FCHAVE . [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
-- On VIRG reduce production expressao -> ACHAVE expressao FCHAVE 
-- On VEZES reduce production expressao -> ACHAVE expressao FCHAVE 
-- On PTV reduce production expressao -> ACHAVE expressao FCHAVE 
-- On MENOS reduce production expressao -> ACHAVE expressao FCHAVE 
-- On MAIS reduce production expressao -> ACHAVE expressao FCHAVE 
-- On FPAR reduce production expressao -> ACHAVE expressao FCHAVE 
-- On FCHAVE reduce production expressao -> ACHAVE expressao FCHAVE 
-- On DIV reduce production expressao -> ACHAVE expressao FCHAVE 

State 51:
expressao -> ID APAR expressoes . FPAR [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
-- On FPAR shift to state 52

State 52:
expressao -> ID APAR expressoes FPAR . [ VIRG VEZES PTV MENOS MAIS FPAR FCHAVE DIV ]
-- On VIRG reduce production expressao -> ID APAR expressoes FPAR 
-- On VEZES reduce production expressao -> ID APAR expressoes FPAR 
-- On PTV reduce production expressao -> ID APAR expressoes FPAR 
-- On MENOS reduce production expressao -> ID APAR expressoes FPAR 
-- On MAIS reduce production expressao -> ID APAR expressoes FPAR 
-- On FPAR reduce production expressao -> ID APAR expressoes FPAR 
-- On FCHAVE reduce production expressao -> ID APAR expressoes FPAR 
-- On DIV reduce production expressao -> ID APAR expressoes FPAR 

State 53:
expressao -> expressao . MAIS expressao [ VIRG VEZES PTV MENOS MAIS FPAR DIV ]
expressao -> expressao . MENOS expressao [ VIRG VEZES PTV MENOS MAIS FPAR DIV ]
expressao -> expressao . VEZES expressao [ VIRG VEZES PTV MENOS MAIS FPAR DIV ]
expressao -> expressao . DIV expressao [ VIRG VEZES PTV MENOS MAIS FPAR DIV ]
expressoes -> expressao . [ FPAR ]
expressoes -> expressao . PTV expressoes [ FPAR ]
expressoes -> expressao . VIRG expressoes [ FPAR ]
-- On VIRG shift to state 54
-- On VEZES shift to state 42
-- On PTV shift to state 56
-- On MENOS shift to state 44
-- On MAIS shift to state 46
-- On DIV shift to state 48
-- On FPAR reduce production expressoes -> expressao 

State 54:
expressoes -> expressao VIRG . expressoes [ FPAR ]
-- On STRING shift to state 27
-- On NOT shift to state 36
-- On INT shift to state 28
-- On ID shift to state 37
-- On FLOAT shift to state 33
-- On CHAR shift to state 34
-- On APAR shift to state 35
-- On ACHAVE shift to state 39
-- On operando shift to state 40
-- On expressoes shift to state 55
-- On expressao shift to state 53
-- On FPAR reduce production expressoes -> 

State 55:
expressoes -> expressao VIRG expressoes . [ FPAR ]
-- On FPAR reduce production expressoes -> expressao VIRG expressoes 

State 56:
expressoes -> expressao PTV . expressoes [ FPAR ]
-- On STRING shift to state 27
-- On NOT shift to state 36
-- On INT shift to state 28
-- On ID shift to state 37
-- On FLOAT shift to state 33
-- On CHAR shift to state 34
-- On APAR shift to state 35
-- On ACHAVE shift to state 39
-- On operando shift to state 40
-- On expressoes shift to state 57
-- On expressao shift to state 53
-- On FPAR reduce production expressoes -> 

State 57:
expressoes -> expressao PTV expressoes . [ FPAR ]
-- On FPAR reduce production expressoes -> expressao PTV expressoes 
